--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,47 +1,66 @@
-
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
-
 body {
-  background-color: #cf7c5c;
+    font-family: 'Waiting for the Sunrise';
+    font-weight: 700;
+}
+.welcome-section {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #000;
+    overflow: hidden;
+}
+.welcome-section .content-wrap {
+    position: absolute;
+    left: 40%;
+    top: 70%;
+    transform: translate3d(-50%, -50%, 0);
+}
+.welcome-section .content-wrap .fly-in-text {
+    list-style: none;
+}
+.welcome-section .content-wrap .fly-in-text li {
+    display: inline-block;
+    margin-right: 40px;
+    font-size: 5em;
+    color: #fff;
+    opacity: 1;
+    transition: all 2s ease;
+}
+.welcome-section .content-wrap .fly-in-text li:last-child {
+    margin-right: 0;
+}
+.welcome-section .content-wrap .enter-button {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #adff2f;
+    opacity: 1;
+    transition: all 1s ease 2s;
 }
 
-.fly-in-text {
-  list-style: none;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translateX(-50%) translateY(-50%);
-}
+.welcome-section.content-hidden .content-wrap .fly-in-text li { opacity: 0; }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(1) { transform: translate3d(10px, 0, 60px); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(2) { transform: translate3d(20px, 70px, 0); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(3) { transform: translate3d(-30px, 0, 0); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(4) { transform: translate3d(-40px, 70px, 80px); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(5) { transform: translate3d(50px, 0, 0); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(6) { transform: translate3d(-60px, 0, 0); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(7) { transform: translate3d(-170px, 0, 0); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(8) { transform: translate3d(-80px, 0, 0); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(9) { transform: translate3d(-90px, 0, 0); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(10) { transform: translate3d(10px, 80px, 90px); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(11) { transform: translate3d(19px, 180px, 120px); }
+.welcome-section.content-hidden .content-wrap .enter-button { opacity: 0; transform: translate3d(0, -30px, 0); }
 
-.fly-in-text li {
-  display: inline-block;
-  margin-right: 40px;
-  font-family: Open Sans, Arial;
-  font-weight: 300;
-  font-size: 4em;
-  color: #597846;
-  opacity: 1;
-  transition: all 2.5s ease;
+@media (min-width: 800px) {
+    .welcome-section .content-wrap .fly-in-text li { font-size: 5em; }
+    .welcome-section .content-wrap .enter-button { font-size: 1em; }
 }
-
-.fly-in-text li:last-child {
-  margin-right: 0;
-}
-
-.fly-in-text.hidden li {
-  opacity: 0;
-}
-
-.fly-in-text.hidden li:nth-child(1) { transform: translateX(-200px) translateY(-200px); }
-.fly-in-text.hidden li:nth-child(2) { transform: translateX(20px) translateY(100px); }
-.fly-in-text.hidden li:nth-child(3) { transform: translateX(-150px) translateY(-80px); }
-.fly-in-text.hidden li:nth-child(4) { transform: translateX(10px) translateY(-200px); }
-.fly-in-text.hidden li:nth-child(5) { transform: translateX(-300px) translateY(200px); }
-.fly-in-text.hidden li:nth-child(6) { transform: translateX(20px) translateY(-20px); }
-.fly-in-text.hidden li:nth-child(7) { transform: translateX(30px) translateY(200px) ;   }
-.fly-in-text.hidden li:nth-child(8) { transform: translateX(-200px) translateY(-200px); }
-.fly-in-text.hidden li:nth-child(9) { transform: translateX(-200px) translateY(-200px); }
-.fly-in-text.hidden li:nth-child(10) { transform: translateX(-200px) translateY(-200px); }
