--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -6,6 +6,18 @@ body {
     font-family: 'Waiting for the Sunrise';
     font-weight: 700;
 }
+
+button {
+     direction: right;
+     background:none!important;
+     color:inherit;
+     border:none;
+     padding:0!important;
+     font: inherit;
+     /*border is optional*/
+     border-bottom:1px solid #444;
+     cursor: pointer;
+}
 .welcome-section {
     position: absolute;
     width: 100%;
@@ -38,7 +50,7 @@ body {
 .welcome-section .content-wrap .enter-button {
     display: block;
     text-align: center;
-    font-size: 1em;
+    font-size: 2em;
     text-decoration: none;
     text-transform: uppercase;
     color: #adff2f;
@@ -46,21 +58,27 @@ body {
     transition: all 1s ease 2s;
 }
 
-.welcome-section.content-hidden .content-wrap .fly-in-text li { opacity: 0; }
-.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(1) { transform: translate3d(10px, 0, 60px); }
-.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(2) { transform: translate3d(20px, 70px, 0); }
-.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(3) { transform: translate3d(-30px, 0, 0); }
-.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(4) { transform: translate3d(-40px, 70px, 80px); }
-.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(5) { transform: translate3d(50px, 0, 0); }
-.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(6) { transform: translate3d(-60px, 0, 0); }
-.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(7) { transform: translate3d(-170px, 0, 0); }
-.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(8) { transform: translate3d(-80px, 0, 0); }
-.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(9) { transform: translate3d(-90px, 0, 0); }
-.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(10) { transform: translate3d(10px, 80px, 90px); }
-.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(11) { transform: translate3d(19px, 180px, 120px); }
-.welcome-section.content-hidden .content-wrap .enter-button { opacity: 0; transform: translate3d(0, -30px, 0); }
 
-@media (min-width: 800px) {
+li:nth-child(12) {
+  color: #ff0000;
+}
+
+.welcome-section.content-hidden .content-wrap .fly-in-text li { opacity: 0; }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(1) { transform: translate3d(50px, -1000px, 1000px); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(2) { transform: translate3d(30px, 1000px, -1000px); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(3) { transform: translate3d(-1000px, -1000px, 1000px); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(4) { transform: translate3d(500px, -1000px, 1000px); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(5) { transform: translate3d(-1000px, -1000px, 1000px); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(6) { transform: translate3d(1000px, -500px, 1000px); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(7) { transform: translate3d(-1000px, -1000px, 1000px); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(8) { transform: translate3d(500px, -1000px, -1000px); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(9) { transform: translate3d(1000px, -1000px, 500px); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(10) { transform: translate3d(-1000px, -500px, 1000px); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(11) { transform: translate3d(500px, -1000px, -1000px); }
+.welcome-section.content-hidden .content-wrap .fly-in-text li:nth-child(12) { transform: translate3d(-500px, -1000px, -1000px); }
+.welcome-section.content-hidden .content-wrap .enter-button { opacity: 0; transform: translate3d(100px, 100px, 100px); }
+
+/*@media (min-width: 800px) {
     .welcome-section .content-wrap .fly-in-text li { font-size: 5em; }
     .welcome-section .content-wrap .enter-button { font-size: 1em; }
-}
+}*/
